--- a/pr-mini.html
+++ b/pr-mini.html
@@ -29,7 +29,9 @@
         <li>Coromandel (4ml)</li>
         <li>Gardenia (4ml)</li>
         <li>Sycomore (4ml)</li>
+        <li>Misia (4ml)</li>
         <li>1932 (4ml)</li>
+        <li>№22 (4ml)</li>
       </ul>
       <hr>
     </div>
@@ -61,6 +63,13 @@
       <ul>
       <p><span class="title">Givenchy</span></p>
         <li>Dahlia Divin (5ml)</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Bvlgari</span></p>
+        <li>Bvlgari Man Black Cologne (5ml)</li>
       </ul>
       <hr>
     </div>
