--- a/pr-tester.html
+++ b/pr-tester.html
@@ -24,6 +24,8 @@
     </div>
     <div class="row">
     <hr>
+      <p>(ост) - значит неполный (остаток во флаконе) </p>
+    <hr>
       <ul>
       <p><span class="title">Lancome</span></p>
         <li>Tresor Midnight Rose (edp 75ml)</li>
