--- a/pr-firma.html
+++ b/pr-firma.html
@@ -106,6 +106,8 @@
       <ul>
       <p><span class="title">Gucci</span></p>
         <li>Bamboo</li>
+        <li>Bloom</li>
+        <li>Flora Gorgeous Gardenia</li>
       </ul>
       <hr>
     </div>
@@ -122,8 +124,51 @@
       <p><span class="title">Dior</span></p>
         <li>J`Adore in Joy</li>
         <li>Poison Girl</li>
+        <li>Miss Dior Parfum</li>
         <li>Miss Dior Blooming Bouquet</li>
         <li>Homme Sport</li>
+        <li>Homme Cologne</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Byredo</span></p>
+        <li>Sunday Cologne</li>
+        <li>Encens Chembur</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Burberry</span></p>
+        <li>Mr.Burberry</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">L`Artisan Parfumeur</span></p>
+        <li>La Chasse Aux Papillons</li>
+        <li>Mure Et Musc</li>
+        <li>Mure Et Musc Extreme</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Lancome</span></p>
+        <li>Lavandes Trianon</li>
+        <li>La Vie Est Belle Florale</li>
+        <li>La Vie Est Belle Parfum</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Giorgio Armani</span></p>
+        <li>Armani Code Profumo</li>
+        <li>Aqua Di Gio Profumo</li>
       </ul>
       <hr>
     </div>
