--- a/pr-mini.html
+++ b/pr-mini.html
@@ -26,6 +26,7 @@
     <hr>
       <ul>
       <p><span class="title">Chanel</span></p>
+
         <li>Coromandel (4ml)</li>
         <li>Gardenia (4ml)</li>
         <li>Sycomore (4ml)</li>
@@ -85,6 +86,7 @@
       <ul>
       <p><span class="title">Viktor &amp; Rolf</span> (набор)</p>
         <li>Bonbon (Edp 7ml + Shover Gel 15ml + Body Lotion 15ml)</li>
+        <li>Floverbomb (Edp 7ml + Shover Gel 15ml + Body Lotion 15ml + Body Cream 15ml)</li>
       </ul>
       <hr>
     </div>
