--- a/pr-mini.html
+++ b/pr-mini.html
@@ -26,13 +26,7 @@
     <hr>
       <ul>
       <p><span class="title">Chanel</span></p>
-
-        <li>Coromandel (4ml)</li>
         <li>Gardenia (4ml)</li>
-        <li>Sycomore (4ml)</li>
-        <li>Misia (4ml)</li>
-        <li>1932 (4ml)</li>
-        <li>№22 (4ml)</li>
       </ul>
       <hr>
     </div>
@@ -43,6 +37,7 @@
         <li>La Petite Robe Noire Ma Robe Cocktail Eau De Toilette (5ml)</li>
         <li>La Petite Robe Noire Eau De Parfum (5ml)</li>
         <li>La Petite Robe Noire Eau De Parfum Couture (5ml)</li>
+        <li>Mon Guerlain (5ml)</li>
       </ul>
       <hr>
     </div>
