--- a/pr-mini.html
+++ b/pr-mini.html
@@ -25,8 +25,8 @@
     <div class="row">
     <hr>
       <ul>
-      <p><span class="title">Chanel</span></p>
-        <li>Gardenia (4ml)</li>
+      <p><span class="title">Prada</span></p>
+        <li>Mimosa (8ml)</li>
       </ul>
       <hr>
     </div>
@@ -65,6 +65,7 @@
     <div class="row">
       <ul>
       <p><span class="title">Bvlgari</span></p>
+        <li>Rose Goldea (5ml)</li>
         <li>Bvlgari Man Black Cologne (5ml)</li>
       </ul>
       <hr>
@@ -74,14 +75,6 @@
       <p><span class="title">Lancome</span> (набор)</p>
         <li>La Vie Est Belle (Edp 4ml + помада L`Absolu Rouge 368 Rose (1.6g)</li>
         <li>La Vie Est Belle (Edp 4ml + Shover Gel 50ml + Body Lotion 50ml)</li>
-      </ul>
-      <hr>
-    </div>
-    <div class="row">
-      <ul>
-      <p><span class="title">Viktor &amp; Rolf</span> (набор)</p>
-        <li>Bonbon (Edp 7ml + Shover Gel 15ml + Body Lotion 15ml)</li>
-        <li>Floverbomb (Edp 7ml + Shover Gel 15ml + Body Lotion 15ml + Body Cream 15ml)</li>
       </ul>
       <hr>
     </div>
