--- a/pr-tester.html
+++ b/pr-tester.html
@@ -73,6 +73,7 @@
     <div class="row">
       <ul>
       <p><span class="title">Evody</span></p>
+        <li>D`Ame De Pique</li>
         <li>Ambre Intense (edp 70ml ост)</li>
         <li>Musc Intense (edp 85ml ост)</li>
       </ul>
@@ -97,6 +98,13 @@
       <ul>
       <p><span class="title">Il Profumo</span></p>
         <li>Coquelicot (edp 25ml ост)</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Thierry Mugler</span></p>
+        <li>Mugler Cologne (edt 50ml ост)</li>
       </ul>
       <hr>
     </div>
