--- a/pr-crem.html
+++ b/pr-crem.html
@@ -20,7 +20,7 @@
      <a class="menu_item" href="pr-rozliv.html">Паробники-розлив</a>
      <a class="menu_item" href="pr-tester.html">Тестеры</a>
      <a class="menu_item" href="pr-mini.html">Миниатюры</a>
-      <!--<a class="menu_item activ" href="pr-crem.html">Крема</a>-->
+      <a class="menu_item activ" href="pr-crem.html">Крема</a>
     </div>
     <div class="row">
     <hr>
@@ -34,32 +34,255 @@
     </div>
     <div class="row">
       <ul>
+      <p><span class="title">Clarins</span></p>
+        <li><span class="sub">Hydra Quench Cream-Mask</span> (15ml) - Увлажняющая крем-маска</li>
+        <li><span class="sub">Hydra-Essentiel Moisturizes and quenches, cooling gel Normal to combination skin</span> (15ml) - Увлажняет и успокаивает, охлаждающий гель для нормальной и комбинированной кожи</li>
+        <li><span class="sub">Instant Light Lip Comfort Oil Enhances &amp; Nourishes 01</span> (2,8ml) - Масло-блеск для губ</li>
+        <li><span class="sub">Instant Light Natural Lip Perfector 01</span> (5ml) - Блеск для губ</li>
+        <li><span class="sub">Instant Light Natural Lip Perfector 03</span> (5ml) - Блеск для губ</li>
+        <li><span class="sub">Instant Light Natural Lip Perfector 05</span> (5ml) - Блеск для губ</li>
+        <li><span class="sub">Instant Light Natural Lip Perfector 06</span> (5ml) - Блеск для губ</li>
+        <li><span class="sub">Instant Light Radiance Boosting Complexion Base 01rose</span> (10ml) - База под макияж, придающая сияние коже</li>
+        <li><span class="sub">Instant Concealer Smoothing Long-Lasting Revives Tired Eyes 02medium</span> (5ml) - Консилер против темных кругов моментального действия</li>
+        <li><span class="sub">Super Restorative Total Eye Concentrate</span> (7ml) - Восстанавливающий концентрат интенсивного действия для ухода за кожей вокруг глаз</li>
+        <li><span class="sub">Hand and Nail Treatment Cream Softens hands Targets age spots Strengthens nails</span> (50ml) - Крем для рук и ногтей</li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Тонизирующая вода Eau Dynamisante (30ml)</li>
+        		<li>Восстанавливающий бальзам моментального действия Baume Beaute Éclair (15ml)</li>
+        		<li>Губная помада Joli Rouge (1.5g)</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Увлажняющий бальзам для тела Baume Corps Super Hydratant (30ml)</li>
+        		<li>Восстанавливающий бальзам моментального действия Baume Beaute Éclair (15ml)</li>
+        		<li>Масло блеск для губ Eclat Minute (2.8ml)</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Смягчающий и отшелушивающий крем с натуральными микрогранулами Doux Polissant (15ml)</li>
+        		<li>Интенсивно увлажняющий крем для нормальной и склонной к сухости кожи Hydra-Essentiel (15ml)</li>
+        		<li>Гель для ухода за кожей вокруг глаз Gel Contour Des Yeux (3ml)</li>
+        	</ul>
+        </li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Clinique</span></p>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Мягкое жидкое мыло для лица Liquid Facial Soap Mild (15ml)</li>
+        		<li>Интеллектуальный восстанавливающий дневной крем Smart Custom-Repair Moisturizer SPF15 (7ml)</li>
+        		<li>Интеллектуальное восстанавливающее средство для ухода за кожей вокруг глаз Smart Custom-Repair Eye Treatment (5ml)</li>
+        		<li>Интеллектуальный увлажняющий ночной крем Smart Night Custom-Repair Moisturizer (7ml)</li>
+        		<li>Интеллектуальная восстанавливающая сыворотка Smart Custom-Repair Serum (7ml)</li>
+        		<li>Универсальная тушь для ресниц High Impact Mascara (3.5ml)</li>
+        		<li>Стойкий блеск для губ Long Last Glosswear (2.3ml)</li>
+        	</ul></li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li> Мягкое жидкое мыло для лица Liquid Facial Soap Mild (15ml)</li>
+        		<li>Уникальное увлажняющее средство Dramatically Defferent Moisturizing Lotion+ (30ml)</li>
+        		<li>Интеллектуальная восстанавливающая сыворотка Smart Custom-Repair Serum (7ml)</li>
+        		<li>Интеллектуальное восстанавливающее средство для ухода за кожей вокруг глаз Smart Custom-Repair Eye Treatment (5ml)</li>
+        		<li>Универсальная тушь для ресниц High Impact Mascara (3.5ml)</li>
+        		<li>Помада для губ интенсивного цвета High Impact Lip Colour (3.6g)</li>
+        		<li>Парфюмерная вода Aromatics In White Perfume Spray (4ml)</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Пенка для умывания Foaming Sonic Facial Soap (15ml)</li>
+        		<li>Интенсивный увлажняющий гель длительного действия Moisture Surge Extended Thirst Relief (7ml)</li>
+        		<li>Стойкий блеск для губ Long Last Glosswear (2.3ml)</li>
+        		<li>Универсальная тушь для ресниц High Impact Mascara (3.5ml)</li>
+        	</ul>
+        </li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
       <p><span class="title">Lancome</span></p>
         <li><span class="sub">Visionnaire - Advanced Skin Corrector</span> (5ml) - Интенсивный уход-корректор для кожи лица</li>
-        <li><span class="sub">Genifique - Youth Activating Concentrate</span> (5ml) - Сыворотка для лица</li>
-        <li><span class="sub">Absolue Precious Cells - Advanced Regenerating and Repairing Care spf15</span> (5ml) - Регенерирующий восстанавливающий антивозрастной крем</li>
+        <li><span class="sub">Advanced Genifique - Youth Activating Concentrate</span> (5ml) -  Активатор молодости для всех типов кожи</li>
+        <li><span class="sub">Advanced Genifique - Youth Activating Concentrate</span> (30ml) - Активатор молодости для всех типов кожи</li>
+        <li><span class="sub">Absolue Precious Cells - Advanced Regenerating and Repairing Care spf15</span> (5ml) - Дневной крем для интенсивного восстановления кожи любого возраста SPF 15</li>
         <li><span class="sub">Absolue Yeux Precious Cells - Global Multi-Restorative Eye Concentrate</span> (3ml) - Восстанавливающий концентрат для кожи вокруг глаз</li>
-        <li><span class="sub">Absolue Yeux Precious Cells - Advanced Regenerating And Repairing Eye Care</span> (5ml) - Крем для регенерации кожи вокруг глаз</li>
         <li><span class="sub">Absolue L`Extrait - Regenerating Ultimate Eye Balm-Elixir</span> (5ml) - Крем-эликсир для регенерации кожи вокруг глаз</li>
+        <li><span class="sub">Absolue Yeux Precious Cells - Advanced Regenerating and Repairing Eye Care</span> (5ml) - Восстанавливающий крем для глаз</li>
+        <li><span class="sub">Shine Lover - Inattendue 354</span> (3.2ml) - Помада-блеск для губ</li>
+        <li><span class="sub">Juicy Tubes - Fraise 17</span> (15ml) - Блеск для губ сияющие оттенки</li>
+        <li><span class="sub">Bi-Facil - Non Oily Instant Cleanser Sensitive Eyes</span> (125ml) - Средство для снятия макияжа с глаз</li>
+        <li><span class="sub">Energie De Vie Nuit - The Overnight Recovery Sleeping Mask</span> (15ml) - Ночная маска</li>
+        <li><span class="sub">Renergie Multi-Lift - Creeme spf15</span> (15ml) - Крем для всех типов кожи, для лица и шеи, эффект лифтинга</li>
+        <li><span class="sub">Renergie Multi-Lift - Creeme Legere</span> (15ml) - Крем с легкой текстурой, для всех типов кожи, для лица и шеи, эффект лифтинга</li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li> Galateis Douceur (50ml) - Молочко для снятия макияжа с лица и глаз</li>
+        		<li>Tonique Douceur (50ml) - Тоник для лица для всех типов кожи</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Hypnose Doll Eyes 01 So Black (2ml) - Тушь для ресниц</li>
+        		<li>TRouge In Love 322M Corail (1.65ml) - Губная помада</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Bi-Facil (30ml) - Средство для быстрого снятия макияжа с глаз</li>
+        		<li>Le Crayon Khol 01 Noir (0.7g) - Карандаш для контура глаз</li>
+        	</ul>
+        </li>
         <hr>
       </ul>
     </div>
     <div class="row">
       <ul>
+      <p><span class="title">La Prairie</span></p>
+        <li><span class="sub">Skin Caviar Essence In Lotion</span> (10ml) - Лосьон с икорным экстрактом</li>
+        <li><span class="sub"> Skin Caviar Luxe Cream</span> (5ml) - Крем для лица с икорным экстрактом</li>
+        <li><span class="sub">Cellular Radiance Cream</span> (5ml) - Крем с клеточным комплексом</li>
+        <li><span class="sub">Cellular Radiance Perfecting Fluide Pure Gold</span> (5ml) - Флюид с клеточным комплексом "Чистое золото"</li>
+        <li><span class="sub">Cellular Swiss Ice Crystal Eye Cream</span> (3ml) - Крем для области вокруг глаз с клеточным комплексом</li>
+        <li><span class="sub">Anti-Aging Rapid Response Booster</span> (5ml) - Антивозрастная сыворотка</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
       <p><span class="title">Givenchy</span></p>
-        <li>Vax`In For Youth - City Skin Solution Youth Protecting D-Tox Eye Serum (2ml) - Сыворотка для ухода за кожей вокруг глаз</li>
-        <li>Vax`In For Youth - City Skin Solution Youth Protecting D-Tox Serum (2ml) - Сыворотка для ухода за кожей лица</li>
-        <li>Hydra Sparkling - Velvet Luminescence Moisturizing Cream - Normal to Combination Skin (5ml) - Увлажняющий крем для нормальной и комбинированной кожи лица</li>
-        <li>Le Soin Noir (5ml) - Крем "сокровище"для лица</li>
+        <li><span class="sub">Vax`In For Youth - City Skin Solution Youth Protecting D-Tox Eye Serum</span> (2ml) - Сыворотка для ухода за кожей вокруг глаз</li>
+        <li><span class="sub">Vax`In For Youth - City Skin Solution Youth Protecting D-Tox Serum</span> (2ml) - Сыворотка для ухода за кожей лица</li>
+        <li><span class="sub">Hydra Sparkling - Velvet Luminescence Moisturizing Cream - Normal to Combination Skin</span> (5ml) - Увлажняющий крем для нормальной и комбинированной кожи лица</li>
+        <li><span class="sub">Hydra Sparkling - Velvet Luminescence Moisturizing Cream</span> (5ml) - Увлажняющий крем для сияния кожи</li>
+        <li><span class="sub">Le Soin Noir Yeux</span> (2ml) - Крем "сокровище" для области вокруг глаз</li>
+        <li><span class="sub">Teint Couture Balm Blurring Foundation Balm SPF15-PA++ (4 Nude Beige)</span> (5ml) - Легкий тонирующий бальзам</li>
+        <li><span class="sub">Noir Couture</span> (4g) - Тушь для ресниц</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Guerlain</span></p>
+        <li><span class="sub">Набор миниатюр в косметичке</span>
+        	<ul>
+        		<li>Cils D`Enfer Maxi Lash 01 Noir (1.5ml) - объемная и подкручивающая тушь для ресниц</li>
+        		<li>La Petite Robe Noire (0.7ml) - парфюмерная вода</li>
+        		<li>Orchidee Imperiale The Toner (15ml) - лосьон для лица</li>
+        		<li>Orchidee Imperiale The Masc (7ml) - маска для лица</li>
+        		<li>rchidee Imperiale The Longevity Concentrate (3ml) - концентрат для лица</li>
+        		<li>Orchidee Imperiale The Eye And Lip Cream (2ml) - крем для глаз и губ</li>
+        	</ul>
+        </li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">G.Armani</span></p>
+        <li><span class="sub">Crema Nuda 01 supreme glow reviving tinted cream hydrates, corrects, unifies</span> (7ml) - Крем для лица с тональным эффектом</li>
+        <li><span class="sub">Fluid Sheer 2</span> (5ml) - Жидкая прозрачная основа</li>
+        <li><span class="sub">Fluid Sheer 7</span> (5ml) - Жидкая прозрачная основа</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Helena Rubinstein</span></p>
+        <li><span class="sub">Re-Plasty Age Recovery - skin regeneration accelerating night care</span> (5ml) - Восстанавливающий ночной уход для борьбы с выраженными признаками старения (45+)</li>
       </ul>
       <hr>
     </div>
     <div class="row">
       <ul>
       <p><span class="title">Dior</span></p>
-        <li>One Essential Eye Serum - Eye Zone Detoxifying Radiance-Boosting Care (3ml-600) - Сыворотка для кожи вокруг глаз, выводящая токсины</li>
-        <li>One Essential City Defense - Toxin Shield Pollution & UV Advanced Protection SPF 50 PA++++ (3ml-300) - Средство для кожи лица и шеи, защищающее от вредного воздействия окружающей среды, токсинов и УФ-излучения</li>
-        <li>L`Or De Vie - Le Serum (5ml) - Сыворотка для ухода за кожей лица</li>
+        <li><span class="sub">One Essential Eye Serum - Eye Zone Detoxifying Radiance-Boosting Care</span> (3ml) - Сыворотка для кожи вокруг глаз, выводящая токсины</li>
+        <li><span class="sub">One Essential City Defense - Toxin Shield Pollution &amp; UV Advanced Protection SPF 50 PA++++</span> (3ml) - Средство для кожи лица и шеи, защищающее от вредного воздействия окружающей среды, токсинов и УФ-излучения</li>
+        <li><span class="sub">One Essential Intense Skin Detoxifying Booster Serum</span> (3ml) - Восстанавливающая сыворотка для кожи лица, выводящая токсины</li>
+        <li><span class="sub">L`Or De Vie - Le Serum</span> (5ml) - Сыворотка для ухода за кожей лица</li>
+        <li><span class="sub">Hydra Life - Pores Away Pink Clay Mask</span> (5ml) - Очищающая маска для сужения пор</li>
+        <li><span class="sub">Hydra Life - Extra Plump Smooth Balm Mask</span> (5ml) - Разглаживающая питательная маска-бальзам</li>
+        <li><span class="sub">Hydra Life - Fresh Hydration Sorbet Crème</span> (5ml) - Увлажняющий крем-сорбе</li>
+        <li><span class="sub">Hydra Life - Deep Hydration Sorbet Water Essence</span> (5ml) - Интенсивная увлажняющая сыворотка для лица</li>
+        <li><span class="sub">Capture Totale - Dream Skin Advanced Global Age-Defying Skincare Perfect Skin Creator</span> (3ml) - Омолаживающее средство для лица, придающее коже совершенство</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Make Up For Ever</span></p>
+        <li><span class="sub">Excessive Lash</span> (2.5ml) - Тушь для ресниц с эффектом объема</li>
+        <li><span class="sub">Pro Finish</span> (1.5g) - Компактное тональное средство для лица</li>
+        <li><span class="sub"> Набор</span>
+        	<ul>
+        		<li>Ultra HD Skin Booster (4.5ml) - увлажняющая подтягивающая сыворотка для лица</li>
+        		<li>Ultra HD Foundation (5ml) - жидкое тональное средство</li>
+        		<li>Ultra HD Concealer (2.5ml) - корректор против темных кругов под глазами</li>
+        		<li>Ultra HD Loose Powder (1g) - рассыпчатая прозрачная минеральная пудра</li>
+        	</ul>
+        </li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Yves Saint Laurent</span></p>
+        <li><span class="sub">Mascara Volume Effet Faux Cils</span> (2ml) - Тушь для ресниц с эффектом накладных ресниц</li>
+        <li><span class="sub">Mascara Volume Effet Faux Cils The Shock 1 Noir Asphalte</span> (2ml) - Тушь для ресниц</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">DR.JART+</span></p>
+        <li><span class="sub">Dermask Water Jet Vital Hydra Solution</span> (5x25g) - маска "капсулы красоты" увлажняющая с гиалуроновой кислотой. Эффект инъекций гиалуроновой кислоты</li>
+      </ul>
+      <hr>
+    </div>
+    <div class="row">
+      <ul>
+      <p><span class="title">Shiseido</span></p>
+        <li><span class="sub">Luminizing Lip Gloss RD404</span> (7.5ml) - Блеск для губ с эффектом сияния</li>
+        <li><span class="sub">Bio-Performance Super Corrective Eye Cream</span> (5ml) - Суперкорректирующий крем для контура глаз</li>
+        <li><span class="sub">Набор миниатюр в косметичке Perforated Copper</span>
+        	<ul>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Очищающая пенка с кремовой текстурой (50мл)</li>
+        		<li>Shiseido Ultimune - Концентрат восстанавливающий энергию кожи (10мл)</li>
+        		<li>Shiseido Bio-Performance - Интенсивный многофункциональный корректирующий крем (5мл)</li>
+        		<li>Shiseido Bio-Performance - Интенсивный многофункциональный корректирующий крем для глаз (5мл)</li>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Маска моментального действия для контура глаз на основе чистого ретинола 1шт</li>
+        		<li>Shiseido Synchro Skin - Устойчивое тональное средство, Neutral 2 (5мл) SPF20</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор миниатюр по уходу за кожей Future Solution LX</span>
+        	<ul>
+        		<li>Крем для комплексной защиты кожи (3мл)</li>
+        		<li>Крем для комплексного обновления кожи (3мл)</li>
+        		<li>Обогащенная очищающая пенка (7мл)</li>
+        		<li>Концентрированный балансирующий софтнер (7мл)</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор миниатюр по уходу за кожей Future Solution LX</span>
+        	<ul>
+        		<li>Крем для комплексной защиты кожи (6мл)</li>
+        		<li>Крем для комплексного обновления кожи (6мл)</li>
+        		<li>Обогащенная очищающая пенка (15мл)</li>
+        		<li>Концентрированный балансирующий софтнер (25мл)</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Подарочный набор в сумке Oshiroi</span>
+        	<ul>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Очищающая пенка с кремовой текстурой (50мл)</li>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Балансирующий обогащенный софтнер с комплексом против морщин (75мл)</li>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Дневной крем с комплексом против морщин (5мл)</li>
+        		<li>Shiseido Ultimune - Концентрат восстанавливающий энергию кожи (10мл)</li>
+        	</ul></li>
       </ul>
       <hr>
     </div>
