--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p><a class="menu_item" href="pr-rozliv.html">Паробники-розлив</a></p>
       <p><a class="menu_item" href="pr-tester.html">Тестеры</a></p>
       <p><a class="menu_item" href="pr-mini.html">Миниатюры</a></p>
-      <!-- <p><a class="menu" href="pr-crem.html">Крема</a></p> -->
+      <p><a class="menu_item" href="pr-crem.html">Крема</a></p>
     </div>
   </div>
 </body>
