--- a/pr-firma.html
+++ b/pr-firma.html
@@ -20,7 +20,7 @@
      <a class="menu_item" href="pr-rozliv.html">Паробники-розлив</a>
      <a class="menu_item" href="pr-tester.html">Тестеры</a>
      <a class="menu_item" href="pr-mini.html">Миниатюры</a>
-      <!--<a class="menu_item" href="pr-crem.html">Крема</a>-->
+     <a class="menu_item" href="pr-crem.html">Крема</a>
     </div>
     <div class="row">
     <hr>
@@ -28,11 +28,7 @@
       <p><span class="title">Chanel</span></p>
         <li>Sycomore</li>
         <li>Eau De Cologne</li>
-        <li>31 Rue Cambon</li>
-        <li>28 La Pausa</li>
         <li>Misia</li>
-        <li>Beige</li>
-        <li>Bois Des Iles</li>
         <li>1932</li>
         <li>№ 18</li>
         <li>Chance Eau de Parfum</li>
