--- a/pr-tester.html
+++ b/pr-tester.html
@@ -20,7 +20,7 @@
      <a class="menu_item" href="pr-rozliv.html">Паробники-розлив</a>
      <a class="menu_item activ" href="pr-tester.html">Тестеры</a>
      <a class="menu_item" href="pr-mini.html">Миниатюры</a>
-      <!--<a class="menu_item" href="pr-crem.html">Крема</a>-->
+     <a class="menu_item" href="pr-crem.html">Крема</a>
     </div>
     <div class="row">
     <hr>
