--- a/pr-crem.html
+++ b/pr-crem.html
@@ -29,6 +29,7 @@
         <li><span class="sub">Le Lift - Creme</span> (5ml) - Крем для коррекции морщин и упругости кожи</li>
         <li><span class="sub">Le Lift - Creme Fine</span> (5ml) - Крем для коррекции морщин и упругости кожи - тонкая текстура</li>
         <li><span class="sub">Le Lift - Eye Concentrate</span> (3ml) - Концентрат для коррекции морщин и повышения упругости кожи вокруг глаз</li>
+        <li><span class="sub">Hydra Beauty - Serum</span> (5ml) - Сыворотка для интенсивного увлажнения кожи</li>
       </ul>
       <hr>
     </div>
@@ -46,6 +47,7 @@
         <li><span class="sub">Instant Concealer Smoothing Long-Lasting Revives Tired Eyes 02medium</span> (5ml) - Консилер против темных кругов моментального действия</li>
         <li><span class="sub">Super Restorative Total Eye Concentrate</span> (7ml) - Восстанавливающий концентрат интенсивного действия для ухода за кожей вокруг глаз</li>
         <li><span class="sub">Hand and Nail Treatment Cream Softens hands Targets age spots Strengthens nails</span> (50ml) - Крем для рук и ногтей</li>
+        <li><span class="sub">Moisture-Rich Body Lotion</span> (100ml) - Увлажняющий лосьон для тела
         <li><span class="sub">Набор</span>
         	<ul>
         		<li>Тонизирующая вода Eau Dynamisante (30ml)</li>
@@ -67,12 +69,28 @@
         		<li>Гель для ухода за кожей вокруг глаз Gel Contour Des Yeux (3ml)</li>
         	</ul>
         </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Средство для быстрого удаления насыщенного или водоустойчивого макияжа с глаз Demaquillant Express Yeux (30ml)</li>
+        		<li>Очищающий пенящийся крем с экстрактом хлопка Doux Nettoyant Moussant (30ml)</li>
+        		<li>Крем-маска для глаз Masque Contour Des Yeux (5ml)</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Средство для быстрого удаления насыщенного или водоустойчивого макияжа с глаз Demaquillant Express Yeux (30ml)</li>
+        		<li>Тушь для ресниц с эффектом объема, удлинения и подкручивания Wonder Perfect Mascara 01 (3ml)</li>
+        		<li>Восстанавливающий бальзам моментального действия Baume Beaute Éclair (15ml)</li>
+        	</ul>
+        </li>
       </ul>
       <hr>
     </div>
     <div class="row">
       <ul>
       <p><span class="title">Clinique</span></p>
+        <li><span class="sub">Sculptwear</span> (8ml) - Моделирующая лифтинг-сыворотка повышающая упругость кожи лица и шеи</li>
+        <li><span class="sub">Repairwear Uplifting</span> (7ml) - Интенсивно восстанавливающий крем</li>
         <li><span class="sub">Набор</span>
         	<ul>
         		<li>Мягкое жидкое мыло для лица Liquid Facial Soap Mild (15ml)</li>
@@ -102,6 +120,14 @@
         		<li>Универсальная тушь для ресниц High Impact Mascara (3.5ml)</li>
         	</ul>
         </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+        		<li>Пенка для умывания Foaming Sonic Facial Soap (30ml)</li>
+        		<li>Дневной интенсивно восстанавливающий укрепляющий крем с эффектом лифтинга Repairwear Uplifting SPF15  Firming Cream (15ml)</li>
+        		<li>Ночной моделирующий крем-гель для лица и шеи Repairwear Sculpting Night Cream (7ml)</li>
+        		<li>Корректирующий тональный крем  Even Better Makeup SPF15 (1.5ml)</li>
+        	</ul>
+        </li>
       </ul>
       <hr>
     </div>
@@ -121,6 +147,7 @@
         <li><span class="sub">Energie De Vie Nuit - The Overnight Recovery Sleeping Mask</span> (15ml) - Ночная маска</li>
         <li><span class="sub">Renergie Multi-Lift - Creeme spf15</span> (15ml) - Крем для всех типов кожи, для лица и шеи, эффект лифтинга</li>
         <li><span class="sub">Renergie Multi-Lift - Creeme Legere</span> (15ml) - Крем с легкой текстурой, для всех типов кожи, для лица и шеи, эффект лифтинга</li>
+        <li><span class="sub">Hydra Zen Anti-Stress Moisturising Cream spf15</span> (15ml) - Увлажняющий, успокаивающий крем</li>
         <li><span class="sub">Набор</span>
         	<ul>
         		<li> Galateis Douceur (50ml) - Молочко для снятия макияжа с лица и глаз</li>
@@ -196,6 +223,7 @@
       <ul>
       <p><span class="title">Helena Rubinstein</span></p>
         <li><span class="sub">Re-Plasty Age Recovery - skin regeneration accelerating night care</span> (5ml) - Восстанавливающий ночной уход для борьбы с выраженными признаками старения (45+)</li>
+        <li><span class="sub">Pure Ritual Care In  Peel</span> (20ml) - Черный крем-пилинг двойного действия</li>
       </ul>
       <hr>
     </div>
@@ -282,7 +310,18 @@
         		<li>Shiseido Benefiance Wrinkle Resist 24 - Балансирующий обогащенный софтнер с комплексом против морщин (75мл)</li>
         		<li>Shiseido Benefiance Wrinkle Resist 24 - Дневной крем с комплексом против морщин (5мл)</li>
         		<li>Shiseido Ultimune - Концентрат восстанавливающий энергию кожи (10мл)</li>
-        	</ul></li>
+        	</ul>
+        </li>
+        <li><span class="sub">Подарочный набор в косметичке Mille Feuille</span>
+        	<ul>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Очищающая пенка с кремовой текстурой (7мл)</li>
+        		<li>Shiseido Benefiance Wrinkle Resist 24 - Балансирующий обогащенный софтнер с комплексом против морщин (7мл)</li>
+        		<li>Shiseido Ultimune - Концентрат восстанавливающий энергию кожи (5мл)</li>
+        		<li>Shiseido Bio-Performance - Лифтинг-крем интенсивного действия для кожи вокруг глаз (5мл)</li>
+            <li>Shiseido Bio-Performance - Лифтинг-сыворотка интенсивного действия (7мл)</li>
+            <li>Shiseido Perfect Rouge - Набор образцов помад 16SS (PK354, RD555, RS656) (3x0.48г)</li>
+        	</ul>
+        </li>
       </ul>
       <hr>
     </div>
