--- a/pr-crem.html
+++ b/pr-crem.html
@@ -166,6 +166,13 @@
         		<li>Le Crayon Khol 01 Noir (0.7g) - Карандаш для контура глаз</li>
         	</ul>
         </li>
+        <li><span class="sub">Набор</span>
+        	<ul>
+            <li>Le Crayon Khol 01 Noir (0.7g) - Карандаш для контура глаз</li>
+            <li>Hypnose Drama 01 Excessive Black (2ml) - Тушь для ресниц</li>
+            <li>Lip Lover 355 Framboise Etoile (3ml) -  Губная помада</li>
+        	</ul>
+        </li>
         <hr>
       </ul>
     </div>
@@ -203,8 +210,15 @@
         		<li>La Petite Robe Noire (0.7ml) - парфюмерная вода</li>
         		<li>Orchidee Imperiale The Toner (15ml) - лосьон для лица</li>
         		<li>Orchidee Imperiale The Masc (7ml) - маска для лица</li>
-        		<li>rchidee Imperiale The Longevity Concentrate (3ml) - концентрат для лица</li>
+        		<li>Orchidee Imperiale The Longevity Concentrate (3ml) - концентрат для лица</li>
         		<li>Orchidee Imperiale The Eye And Lip Cream (2ml) - крем для глаз и губ</li>
+        	</ul>
+        </li>
+        <li><span class="sub">Набор миниатюр  Abeille Royale в косметичке</span>
+        	<ul>
+        		<li>Масло для лифтинга и упругости кожи лица (5мл)</li>
+        		<li>Ночной крем для лица, коррекция морщин, упругость кожи (3мл)</li>
+        		<li>Восстанавливающая гелевая маска для лица (3мл)</li>
         	</ul>
         </li>
       </ul>
