--- a/pr-firma.html
+++ b/pr-firma.html
@@ -27,10 +27,9 @@
       <ul>
       <p><span class="title">Chanel</span></p>
         <li>Sycomore</li>
-        <li>Eau De Cologne</li>
         <li>Misia</li>
         <li>1932</li>
-        <li>№ 18</li>
+        <li>Beige</li>
         <li>Chance Eau de Parfum</li>
         <li>Chance Eau Vive</li>
         <li>Chance Eau Tendre</li>
@@ -127,25 +126,8 @@
     </div>
     <div class="row">
       <ul>
-      <p><span class="title">Byredo</span></p>
-        <li>Sunday Cologne</li>
-        <li>Encens Chembur</li>
-      </ul>
-      <hr>
-    </div>
-    <div class="row">
-      <ul>
       <p><span class="title">Burberry</span></p>
         <li>Mr.Burberry</li>
-      </ul>
-      <hr>
-    </div>
-    <div class="row">
-      <ul>
-      <p><span class="title">L`Artisan Parfumeur</span></p>
-        <li>La Chasse Aux Papillons</li>
-        <li>Mure Et Musc</li>
-        <li>Mure Et Musc Extreme</li>
       </ul>
       <hr>
     </div>
